--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,8 +1,8 @@
-ledgersmb (1.3.17~rc1-1) experimental; urgency=low
+ledgersmb (1.3.17-1~1) UNRELEASED; urgency=low
 
-  * Release candidate RC1 for new upstream release.
+  * New upstream release.
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 15 May 2012 11:45:06 -0400
+ -- Robert James Clay <jame@rocasa.us>  Fri, 18 May 2012 20:08:26 -0400
 
 ledgersmb (1.3.16-1) unstable; urgency=low
 
