--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 ledgersmb (1.3.17-1~1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Add the templates directory to the debian/ledgersmb.examples file.
+  * Changes to debian/control:
+    - Add the libexcel-template-plus-perl and libtemplate-plugin-latex-perl
+      modules to Suggests.
 
- -- Robert James Clay <jame@rocasa.us>  Fri, 18 May 2012 20:08:26 -0400
+ -- Robert James Clay <jame@rocasa.us>  Fri, 18 May 2012 22:18:08 -0400
 
 ledgersmb (1.3.16-1) unstable; urgency=low
 
