--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,21 @@
-ledgersmb (1.3.17-1~1) UNRELEASED; urgency=low
+ledgersmb (1.3.17-1~2) UNRELEASED; urgency=low
 
   * New upstream release.
-  * Add the templates directory to the debian/ledgersmb.examples file.
+  * Add a note regarding libimage-size-perl to README.Debian.
+  * Changes to debian/patches/05_confdir.patch:
+    - Update the templates path to be /var/lib/ledgersmb/templates.
+  * Add the application templates directory to the debian/ledgersmb.examples
+    file and remove it from the debian/ledgersmb.install file.
   * Changes to debian/control:
-    - Add the libexcel-template-plus-perl and libtemplate-plugin-latex-perl
-      modules to Suggests.
+    - Add libtemplate-plugin-latex-perl module to Recommends.
+    - Add the libexcel-template-plus-perl and libimage-size-perl modules
+      to Suggests.
+  * Add code in ledgersmb.postinst to create the initial default set of
+    templates from the example templates.
+  * Add code with debian/ledgersmb.preinst to, if it exists, move the
+    directory /etc/ledgersmb/templates to /var/lib/ledgersmb.
 
- -- Robert James Clay <jame@rocasa.us>  Fri, 18 May 2012 22:18:08 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sun, 27 May 2012 13:58:26 -0400
 
 ledgersmb (1.3.16-1) unstable; urgency=low
 
