--- a/ledger-smb/trunk/debian/NEWS
+++ b/ledger-smb/trunk/debian/NEWS
@@ -1,3 +1,11 @@
+ledgersmb (1.3.17-1) unstable; urgency=low
+
+  The templates directory is now at /var/lib/ledgersmb/templates instead of
+  being at /etc/ledgersmb/templates. For upgrades, the templates path in
+  /etc/ledgersmb/ledgersmb.conf will need to be updated manually.
+
+ -- Robert James Clay <jame@rocasa.us>  Sat, 02 Jun 2012 20:17:26 -0400
+
 ledgersmb (1.3.16-1) unstable; urgency=low
 
   Now have experimental dbconfig/debconf usage for configuring LedgerSMB during
@@ -6,6 +14,5 @@ ledgersmb (1.3.16-1) unstable; urgency=low
   user and use that in the http://localhost/ledgersmb/setup.pl script to create
   the company databases for use. More information regarding this is available
   in /usr/share/doc/ledgersmb/README.Debian.
-  
 
  -- Robert James Clay <jame@rocasa.us>  Tue, 08 May 2012 08:49:46 -0400
