--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,9 +1,10 @@
-ledgersmb (1.3.17-1~2) UNRELEASED; urgency=low
+ledgersmb (1.3.17-1) unstable; urgency=low
 
   * New upstream release.
   * Add a note regarding libimage-size-perl to README.Debian.
   * Changes to debian/patches/05_confdir.patch:
     - Update the templates path to be /var/lib/ledgersmb/templates.
+  * No longer need to set ownership of /etc/ledgersmb/templates in debian/rules.
   * Add the application templates directory to the debian/ledgersmb.examples
     file and remove it from the debian/ledgersmb.install file.
   * Changes to debian/control:
@@ -15,7 +16,7 @@ ledgersmb (1.3.17-1~2) UNRELEASED; urgency=low
   * Add code with debian/ledgersmb.preinst to, if it exists, move the
     directory /etc/ledgersmb/templates to /var/lib/ledgersmb.
 
- -- Robert James Clay <jame@rocasa.us>  Sun, 27 May 2012 13:58:26 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sat, 02 Jun 2012 20:59:37 -0400
 
 ledgersmb (1.3.16-1) unstable; urgency=low
 
