--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,35 @@
-ledgersmb (1.3.16~rc1-1~1) UNRELEASED; urgency=low
+ledgersmb (1.3.17-1) unstable; urgency=low
 
-  * New release candidate 1.3.16 rc1.
+  * New upstream release.
+  * Add a note regarding libimage-size-perl to README.Debian.
+  * Changes to debian/patches/05_confdir.patch:
+    - Update the templates path to be /var/lib/ledgersmb/templates.
+  * No longer need to set ownership of /etc/ledgersmb/templates in debian/rules.
+  * Add the application templates directory to the debian/ledgersmb.examples
+    file and remove it from the debian/ledgersmb.install file.
+  * Changes to debian/control:
+    - Add libtemplate-plugin-latex-perl module to Recommends.
+    - Add the libexcel-template-plus-perl and libimage-size-perl modules
+      to Suggests.
+  * Add code in ledgersmb.postinst to create the initial default set of
+    templates from the example templates.
+  * Add code with debian/ledgersmb.preinst to, if it exists, move the
+    directory /etc/ledgersmb/templates to /var/lib/ledgersmb.
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 01 May 2012 08:07:54 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sat, 02 Jun 2012 20:59:37 -0400
 
-ledgersmb (1.3.15-2) experimental; urgency=low
+ledgersmb (1.3.16-1) unstable; urgency=low
+
+  * New upstream release.
+  * Resolves package ITP. (Closes: #406935)
+  * Update and rewrite debian/TODO and README.Debian.
+  * Update debian/NEWS, debian/templates and README.Debian regarding the initial
+    configuration of the package.
+  * Add update of PostgreSQL contrib_dir variable to patches/05_confdir.patch.
+
+ -- Robert James Clay <jame@rocasa.us>  Tue, 08 May 2012 07:55:30 -0400
+
+ledgersmb (1.3.15-2) unstable; urgency=low
 
   * Rewrite LedgerSMB README.Debian, including database related information.
   * Correct debconf variable lsmb_debconf to debconf_install in debian/postinst.
