--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-ledgersmb (1.3.17-2~1) UNRELEASED; urgency=low
+ledgersmb (1.3.18~rc1-1~1) UNRELEASED; urgency=low
 
   * Start development for next LedgerSMB debian package.
 
- -- Robert James Clay <jame@rocasa.us>  Sat, 02 Jun 2012 22:39:53 -0400
+ -- Robert James Clay <jame@rocasa.us>  Mon, 04 Jun 2012 07:53:39 -0400
 
 ledgersmb (1.3.17-1) unstable; urgency=low
 
