--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
 ledgersmb (1.3.18~rc1-1~1) UNRELEASED; urgency=low
 
-  * Start development for next LedgerSMB debian package.
-
- -- Robert James Clay <jame@rocasa.us>  Mon, 04 Jun 2012 07:53:39 -0400
+  * Removed the no longer needed symbolic link to /var/lib/ledgersmb/css from
+    debian/ledgersmb.links.
+  * Removed the no longer needed references to libexcel-template-plus-perl from
+    debian/control and debian/README.Debian.
+  
+ -- Robert James Clay <jame@rocasa.us>  Mon, 04 Jun 2012 08:46:23 -0400
 
 ledgersmb (1.3.17-1) unstable; urgency=low
 
