--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,11 +1,12 @@
-ledgersmb (1.3.18~rc1-1~1) UNRELEASED; urgency=low
+ledgersmb (1.3.18-1~1) UNRELEASED; urgency=low
 
   * Removed the no longer needed symbolic link to /var/lib/ledgersmb/css from
     debian/ledgersmb.links.
   * Removed the no longer needed references to libexcel-template-plus-perl from
     debian/control and debian/README.Debian.
-  
- -- Robert James Clay <jame@rocasa.us>  Mon, 04 Jun 2012 08:46:23 -0400
+  * Removed blib/man3/LedgerSMB::Template::XLS.3pm from ledgersmb.manpages.
+
+ -- Robert James Clay <jame@rocasa.us>  Yue, 06 Jun 2012 08:42:23 -0400
 
 ledgersmb (1.3.17-1) unstable; urgency=low
 
