--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,9 @@ ledgersmb (1.3.18-1~1) UNRELEASED; urgency=low
   * Removed the no longer needed references to libexcel-template-plus-perl from
     debian/control and debian/README.Debian.
   * Removed blib/man3/LedgerSMB::Template::XLS.3pm from ledgersmb.manpages.
+  * Add removing empty example language specifc template directories to d/rules.
 
- -- Robert James Clay <jame@rocasa.us>  Yue, 06 Jun 2012 08:42:23 -0400
+ -- Robert James Clay <jame@rocasa.us>  Tue, 06 Jun 2012 17:51:08 -0400
 
 ledgersmb (1.3.17-1) unstable; urgency=low
 
