--- a/ledger-smb/trunk/debian/changelog
+++ b/ledger-smb/trunk/debian/changelog
@@ -1,13 +1,22 @@
-ledgersmb (1.3.18-1~1) UNRELEASED; urgency=low
+ledgersmb (1.3.18-1~2) UNRELEASED; urgency=low
 
-  * Removed the no longer needed symbolic link to /var/lib/ledgersmb/css from
-    debian/ledgersmb.links.
+  * Changes to debian/patches/:
+    - Update 05_confdir.patch for the new cssdir configuration item.
+    - Update 10_httpdconf.patch for the new cssdir configuration item.
+  * Add the application css directory to the debian/ledgersmb.examples file
+    and remove it from the debian/ledgersmb.install file.
+  * Add code in ledgersmb.postinst to create the initial default set of css
+    files from the example css files.
+  * Add code in ledgersmb.postrm to remove /var/lib/ledgersmb/css during
+    a package purge.  (Like for /var/lib/ledgersmb/templates, which was 
+    actually added with 1.3.17-1.)
   * Removed the no longer needed references to libexcel-template-plus-perl from
     debian/control and debian/README.Debian.
   * Removed blib/man3/LedgerSMB::Template::XLS.3pm from ledgersmb.manpages.
-  * Add removing empty example language specifc template directories to d/rules.
+  * Add the removal of empty example language specifc template directories to
+    debian/rules.
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 06 Jun 2012 17:51:08 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sun, 10 Jun 2012 18:34:20 -0400
 
 ledgersmb (1.3.17-1) unstable; urgency=low
 
