--- a/debian/TODO
+++ b/debian/TODO
@@ -1,11 +1,18 @@
 debian/TODO for LedgerSMB v1.3
 
+- The package installs the LedgerSMB css directory to /var/lib/ledgersmb/css,
+but the application itself currently expects it to be in the main installation
+directory. The issue at least partially resolved with v1.3.18 and v1.3.19.
+(A symbolic link pointing to it is installed with the current packaging
+as a workaround for the issue.)
 
-- Add a section in README.Debian about how HTML, LaTeX, and Text templates are
-handled now?
+- A review and translation process is underway for LedgerSMB debian/templates
+and debian/po/*; do updates provided by debian-l10n-english once that process
+has been completed. Reference also # 674023, 676494 (cs.po), 676511 (pl.po),
+676556 (sv.po), and 676662 (ru.po).
 
 - The application UPGRADE file does not really need to be installed with the
-package?; any useful information should be moved to README.Debian.
+package?  Any useful information could be moved to README.Debian.
 
 - The dbconfig configuration is apparently capable of creating the ledgersmb
 user but it is not getting created with the necessary permissions. It is also
@@ -17,18 +24,13 @@ ledgersmb, if that database is even needed.
 source file doc/manual/LedgerSMB-manual.tex. Use the same source file to create
 an HTML version?
 
-- Create an HTML and/or PDF file of templateing/templating-guide.tex?
+- Create an HTML and/or PDF file of templateing/templating-guide.tex?  And
+then register it with doc-base?
 
 - Add registration of at least database/ledgersmb.html to doc-base?
 
-- Review the tools/* shell and perl scripts to see what if any need changes for
-usage on a Debian installation.
-
-- The package installs the LedgerSMB css directory to /var/lib/ledgersmb/css,
-but the application itself currently expects it to be in the main installation
-directory; reference also upstream bug # 3516730. Fixed with v1.3.18? (A symbolic
-link pointing to it is installed with the current packaging as a workaround for
-the issue.)
+- Review the tools/* shell and perl scripts to determine what changes may be
+necessary to make them usable on a Debian installation.
 
 - New 1.3 version of LedgerSMB contains an embedded javascript library. The
 embedded version appears to be 1.8.2.  The library is available in Debian as the
@@ -44,4 +46,4 @@ to be operational with it.
 -> Instead of patching the files that use it directly, try using dh_linktree to
 create the set of links to the debian packages.
 
- -- Robert James Clay <jame@rocasa.us>  Sat,  2 Jun 2012 20:47:06 -0400
+ -- Robert James Clay <jame@rocasa.us>  Sun, 10 Jun 2012 18:39:04 -0400
