--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-ledgersmb (1.3.18-2~1) UNRELEASED; urgency=low
+ledgersmb (1.3.19~rc1-1~1) UNRELEASED; urgency=low
 
-  * Start development for package v1.3.18-2..
+  * New upstream release.
+    - Fixed discarded input/bad label on 1.2 upgrade screen. (Closes: #677098)
+  * Changes for debian/control:
+    - Update the URL in the Vcs-Browser entry.
+  * Update debian/watch to exclude development snapshots. (Closes: #677612)
 
- -- Robert James Clay <jame@rocasa.us>  Tue, 12 Jun 2012 18:13:24 -0400
+ -- Robert James Clay <jame@rocasa.us>  Mon, 18 Jun 2012 22:33:24 -0400
 
 ledgersmb (1.3.18-1) unstable; urgency=low
 
@@ -61,8 +65,6 @@ ledgersmb (1.3.15-2) unstable; urgency=low
 
   * Rewrite LedgerSMB README.Debian, including database related information.
   * Correct debconf variable lsmb_debconf to debconf_install in debian/postinst.
-  * Changes for debian/patches/*:
-    - Renumber 15_httpdconf.patch as 10_httpdconf.patch. 
     - Add 15_UI-setup-credentials.patch to set 'ledgersmb' as the default
       database superuser for setup.pl.
 
